# foothold-sitac

./: CHANGELOG.md  CLAUDE.md  README.md  install.cmd  map.js  pyproject.toml  run.cmd  run.py  update.cmd
.github/workflows/: publish-pypi.yml
app/: config.py  dependencies.py  foothold.py  foothold_api_router.py  foothold_router.py  main.py  schemas.py  templater.py
config/: config.yml.dist
docs/: features.md  lua-file-format.md
scripts/: lint.sh
src/foothold_sitac/: briefing.py  briefing_api_router.py  briefing_export.py  briefing_router.py  briefing_storage.py  cache.py  config.py  console.py  dcs_coordinates.py  dependencies.py  foothold.py  foothold_api_router.py  foothold_router.py  main.py  schemas.py  templater.py  unit_names.py
src/foothold_sitac/static/css/: briefing.css  map.css  modals.css  navbar.css  player.css  sitac.css  success.css
src/foothold_sitac/static/js/: briefing.js  map.js  modals.js  table-sort.js  tooltips.js
src/foothold_sitac/templates/briefing/: edit.html  new.html  (+2 more)
static/css/: map.css  navbar.css
static/js/: coords.js  map.js  modals.js
templates/: home.html  sitac.html
templates/foothold/: map.html  servers.html  sitac.html
templates/foothold/partials/: ejected.html  missions.html  players.html  zones.html
tests/fixtures/test_progress/: foothold_all_blue.lua  foothold_all_red.lua  foothold_empty.lua  foothold_mixed.lua  foothold_with_active_neutral.lua  foothold_with_neutral.lua
tests/integration/: test_api.py
tests/units/: test_cache.py  test_config.py  test_foothold.py  test_templater.py  test_unit_names.py
(+32 files in other folders)
